[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ball8.png" type="Texture" id=1]
[ext_resource path="res://assets/poolball.png" type="Texture" id=2]
[ext_resource path="res://scripts/Boss1.gd" type="Script" id=3]
[ext_resource path="res://assets/particle1.png" type="Texture" id=4]
[ext_resource path="res://assets/particle2.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.779006, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.445867, 1, 1, 1, 0.278431 )

[sub_resource type="Curve" id=3]
min_value = -40.0
max_value = 40.0
_data = [ Vector2( 0.00980392, -16.4545 ), 0.0, 43.6364, 0, 0, Vector2( 0.970588, -40 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0331492, 0.41989, 1 )
colors = PoolColorArray( 0.120605, 0.10129, 0.10129, 1, 0.836844, 0.825089, 0.825089, 0.606998, 1, 1, 1, 0.266667 )

[node name="Boss1" type="RigidBody2D"]
script = ExtResource( 3 )

[node name="Poolball" type="Sprite" parent="."]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 1 )

[node name="Stopped_Timer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="number" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Hurt_particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
speed_scale = 8.0
explosiveness = 1.0
randomness = 0.2
lifetime_randomness = 0.4
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 20.0
spread = 80.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
angular_velocity_random = 0.45
angle_random = 0.8
scale_amount = 0.4
scale_amount_random = 0.2
color = Color( 0.929412, 0.870588, 0.870588, 1 )
color_ramp = SubResource( 2 )

[node name="Death_particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 800
lifetime = 6.0
one_shot = true
explosiveness = 0.95
randomness = 0.3
lifetime_randomness = 0.1
local_coords = false
texture = ExtResource( 5 )
emission_shape = 1
emission_sphere_radius = 40.0
gravity = Vector2( 0, -40 )
initial_velocity_random = 0.8
angular_velocity = 4.0
linear_accel = 50.0
radial_accel = 25.0
radial_accel_random = 1.0
radial_accel_curve = SubResource( 3 )
angle = 20.0
angle_random = 1.0
scale_amount = 0.5
color_ramp = SubResource( 4 )

[connection signal="timeout" from="Stopped_Timer" to="." method="_on_Stopped_Timer_timeout"]
